Added the docker stuff to Jenkinsfile

--- a/Jenkins_lab-main/Jenkinsfile
+++ b/Jenkins_lab-main/Jenkinsfile
@@ -1,8 +1,10 @@
 pipeline {
+    agent { docker { image 'maven:3.8.7-eclipse-temurin-11' } }
     agent any
     stages {
         stage('Build') {
             steps {
+                sh 'mvn --version'
                 sh 'mvn clean install'
                 echo 'Build Stage Successful'
             }
