--- a/Jenkins_lab-main/Jenkinsfile
+++ b/Jenkins_lab-main/Jenkinsfile
@@ -2,8 +2,9 @@ pipeline {
     agent { docker { image 'maven:3.8.7-eclipse-temurin-11' } }
     stages {
         stage('Initialize'){
-        def dockerHome = tool 'myDocker'
-        env.PATH = "${dockerHome}/bin:${env.PATH}"
+            steps {
+                def dockerHome = tool 'myDocker'
+                env.PATH = "${dockerHome}/bin:${env.PATH}" }
         }
         stage('Build') {
             steps {
