--- a/Jenkins_lab-main/Jenkinsfile
+++ b/Jenkins_lab-main/Jenkinsfile
@@ -1,11 +1,21 @@
+#!groovy
 pipeline {
-    agent { docker { image 'maven:3.8.7-eclipse-temurin-11' } }
-    stages {
-        stage('Initialize'){
-            steps {
-                def dockerHome = tool 'myDocker'
-                env.PATH = "${dockerHome}/bin:${env.PATH}" }
+    agent any
+    tools {
+        maven 'M3'
         }
+    stages {
+        stage('Maven Install'){
+          steps {
+            agent {
+              script {
+                docker {
+                    image 'maven:3.5.0'
+                    }
+                  }
+                }
+              }
+            }
         stage('Build') {
             steps {
                 sh 'mvn --version'
