--- a/Jenkins_lab-main/Jenkinsfile
+++ b/Jenkins_lab-main/Jenkinsfile
@@ -1,10 +1,13 @@
 #!groovy
 pipeline {
     agent any
-    tools {
-        maven 'M3'
-        }
+
     stages {
+         stage('com'){
+            steps{ script {
+            def mvnHome = tool name: 'M3', type: 'maven'
+            sh "${mvnHome}/bin/mvn -B -DskipTests clean package"
+            }}} 
         stage('Maven Install'){
           steps {
             agent {
