--- a/Jenkins_lab-main/Jenkinsfile
+++ b/Jenkins_lab-main/Jenkinsfile
@@ -1,54 +1,31 @@
-#!groovy
 pipeline {
     agent any
 
     stages {
-         stage('com'){
-            steps{ script {
-            def mvnHome = tool name: 'M3', type: 'maven'
-            def pomfilepath= C:\\Users\\kalya\\test\\Jenkins_lab-main\\pom.xml
-
-            sh "${mvnHome}/bin/mvn -B -DskipTests clean package"
-            }}} 
-        stage('Maven Install'){
-          steps {
-            agent {
-              script {
-                docker {
-                    image 'maven:3.5.0'
-                    }
-                  }
-                }
-              }
-            }
         stage('Build') {
             steps {
-                sh 'mvn --version'
-                sh 'mvn clean install'
-                echo 'Build Stage Successful'
+                echo 'Starting Build'
+                sh 'make -C main'
+                echo 'Build Completed'
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
-                echo 'Test Stage Successful'
-                post {
-                    always {
-                        junit 'target/surefire-reports/*.xml'
-                    }
-                }
+                echo 'Starting Testing'
+                sh '/var/jenkins_home/workspace/PES2UG20CS102-1/main/hello_exec'
+                echo 'Test Completed'
             }
         }
         stage('Deploy') {
             steps {
-                sh 'mvn deploy'
-                echo 'Deployment Successful'
+                echo 'Starting Deploy'
+                echo 'Deploy Completed'
             }
         }
     }
-    post {
-        failure {
-            echo 'Pipeline failed'
-        }
+  post {
+    failure {
+      echo 'Pipeline Failed'
     }
+  }
 }
