--- a/Jenkins_lab-main/Jenkinsfile
+++ b/Jenkins_lab-main/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline {
             steps {
                 echo 'Starting Build'
                 sh 'ls'
+                sh 'cd Jenkins_lab-main'
                 sh 'make -C main'
                 echo 'Build Completed'
             }
